# faery

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  flake.nix  install_dependencies.py  pyproject.toml
.github/workflows/: build_docs.yml  build_wheels.yml  ci-build.yml  install_dependencies.py
docs/: batch.md  cli.md  concepts.md  dev.md  install.md  myst.yml  python.md  quickstart.md  stream_types.md
docs/inputs/: array.md  cameras.md  files.md  overview.md  stdin.md  udp.md
examples/: camera_to_aedat4.py  camera_to_gui.py  camera_to_stdout.py  crop_and_slice.py  custom_colormap.py  dvs_to_es.py  dynamic_tasks.py  event_rate.py  events_to_frames.py  events_to_video.py  events_to_video_rescale_annotate.py  events_to_video_slow_motion.py  filter_hot_pixels.py  kinectograph.py  progress_bar.py  repeated_colormap.py  visualize_file_slow_motion.py  wiggle.py
faery/: __init__.py  __main__.py  cli.py  csv.py  dat.py  decoder.py  encoder.py  events_filter.py  events_input.py  events_stream.py  file_decoder.py  file_encoder.py  file_type.py  frame_stream.py  inputs.py  output.py  single_event.csv  stdio.py  stream.py  stream_event.py  stream_frame.py  stream_types.py  udp.py
faery/cli/: __init__.py  cli.py  input.py  output.py
faery/extension_types/: csv.pyi
python/faery/: __init__.py  __main__.py  color.py  display.py  enums.py  event_camera_input.py  event_rate.py  events_filter.py  events_input.py  events_render.py  events_stream.py  events_stream_state.py  file_decoder.py  file_encoder.py  file_type.py  frame_filter.py  frame_input.py  frame_stream.py  frame_stream_state.py  kinectograph.py  render.py  spectrogram.py  stream.py  svg.py  task.py  timestamp.py  udp_decoder.py  udp_encoder.py  wiggle.py
python/faery/cli/: __init__.py  cli.py  colormaps.py  command.py  commands.py  convert.py  coolname.py  faery_script.mustache  info.py  init.py  inline.py  list_filters.py  parser.py  process.py  render.py  run.py
python/faery/colormaps/: __init__.py  _base.py  acton.py  bam.py  bam_o.py  bamako.py  batlow.py  batlow_black.py  batlow_white.py  berlin.py  bilbao.py  broc.py  broc_o.py  buda.py  cork.py  cork_o.py  davos.py  devon.py  glasgow.py  gray.py  hawaii.py  imola.py  lajolla.py  lapaz.py  lipari.py  lisbon.py  managua.py  navia.py  navia_white.py  nuuk.py  oslo.py  roma.py  roma_o.py  starry_night.py  tofino.py  tokyo.py  turku.py  vanimo.py  vik.py  vik_o.py
python/faery/extension_types/: evt.pyi
python/faery/types/: aedat.pyi  csv.pyi  dat.pyi  es.pyi  event_stream.pyi  evt.pyi  gif.pyi  gui.pyi  image.pyi  job_metadata.pyi  mp4.pyi  mustache.pyi  raster.pyi  render.pyi
python/tests/data/: generic.es
src/: event_spectrogram.rs  font.rs  gif.rs  image.rs  job_metadata.rs  lib.rs  math.md  math.md.m  mustache.rs  raster.rs  render.rs  types.rs  utilities.rs
src/aedat/: common.rs  decoder.rs  encoder.rs  events_generated.rs  file_data_table_generated.rs  frame_generated.rs  imus_generated.rs  io_header_generated.rs  ioheader_generated.rs  mod.rs  triggers_generated.rs
src/aedat/flatbuffers/: file_data_table.fbs  frame.fbs  io_header.fbs
src/csv/: decoder.rs  encoder.rs  mod.rs
src/dat/: common.rs  decoder.rs  encoder.rs  mod.rs
src/es/: decoder.rs  encoder.rs  mod.rs
src/event_stream/: common.rs  decoder.rs  encoder.rs  mod.rs
src/evt/: common.rs  decoder.rs  encoder.rs  mod.rs
src/gui/: mod.rs  viewer.rs
src/mp4/: mod.rs  mp4.rs  x264.h  x264.rs
src/python/: csv.py  test.csv
src/rosbag/: decoder.rs  mod.rs
src/rust/: lib.rs  types.rs
tests/: assets.py  test_chunked_read.py  test_cli.py  test_csv.py  test_csv_read.py  test_dat.py  test_decoders.py  test_encoders.py  test_evt.py  test_mustache.py  test_stdio.py  test_time.py  test_timestamps.py  test_udp.py
tests/data/: color.es  dvs.es  test.csv
