[package]
name = "python"
edition = "2021"
resolver = "2"

[lib]
name = "faery"
crate-type = ["cdylib"]

[dependencies]
flatbuffers = "24.3.25"
fontdue = "0.9.2"
image = {version = "0.25.1", default-features = false, features = ["png"]}
lz4 = "1.28.0"
mp4 = "0.14.0"
neuromorphic-types = "0.4.0"
numpy = {version = "0.22.0"}
pyo3 = {version = "0.22.0", features = ["extension-module"]}
roxmltree = "0.20.0"
thiserror = "1.0"
zstd = "0.13.2"

[build-dependencies]
bindgen = "0.70.1"

[profile.release]
lto = true
codegen-units = 1
