[package]
name = "python"
edition = "2021"
resolver = "2"

[lib]
name = "faery"
crate-type = ["cdylib"]

[dependencies]
flatbuffers = "25.1.24"
fontdue = "0.9.2"
gifski = {version = "1.32.0", default-features = false}
image = {version = "0.25.1", default-features = false, features = ["png"]}
lz4 = "1.28.0"
mp4 = "0.14.0"
mustache = "0.9.0"
neuromorphic-types = "0.6.0"
numpy = {version = "0.23.0"}
pyo3 = {version = "0.23.4", features = ["extension-module"]}
resvg = "0.44.0"
rosbag = "0.6.3"
roxmltree = "0.20.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8.19"
zstd = "0.13.2"
slint = "1.9.1"

[build-dependencies]
bindgen = "0.70.1"

[profile.release]
codegen-units = 1
lto = true
