[project]
name = "faery"
description = "Ferries event-based data from A to B"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Alexandre Marcireau", email = "alexandre.marcireau@gmail.com" },
  { name = "Jens Egholm Pedersen", email = "jens@jepedersen.dk" },
  { name = "Gregor Lenz", email = "gregor@neurobus.space" },
]
version = "0.2.0"
requires-python = ">=3.9"
dependencies = ["click==8.1.7", "numpy>=1.26"]

[project.optional-dependencies]
tests = ["pytest==8.3.3"]

[project.scripts]
faery = "faery.cli.cli:cli"

[project.urls]
homepage = "https://github.com/aestream/faery/"
repository = "https://github.com/aestream/faery/"
documentation = "https://github.com/aestream/faery/"

[build-system]
requires = ["maturin==1.7.4"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pyright]
typeCheckingMode = "basic"
executionEnvironments = [{ root = ".", venv = ".venv" }]

[tool.isort]
profile = "black"
