[project]
name = "faery"
description = "Ferries event-based data from A to B"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Alexandre Marcireau", email = "alexandre.marcireau@gmail.com" },
  { name = "Jens Egholm Pedersen", email = "jens@jepedersen.dk" },
  { name = "Gregor Lenz", email = "gregor@neurobus.space" },
]
requires-python = ">=3.9"
dependencies = ["numpy>=1.26"]
version = "0.5.0"

[project.optional-dependencies]
tests = ["pytest==8.3.3"]

[project.scripts]
faery = "faery:__main__.main"

[project.urls]
homepage = "https://github.com/aestream/faery/"
repository = "https://github.com/aestream/faery/"
documentation = "https://github.com/aestream/faery/"

[build-system]
requires = ["maturin==1.7.4"]
build-backend = "maturin"

[tool.maturin]
include = ["python/faery/cli/faery_script.mustache"]
python-source = "python"
module-name = "faery.extension"
features = ["pyo3/extension-module"]

[tool.pyright]
typeCheckingMode = "basic"
executionEnvironments = [{ root = ".", venv = ".venv" }]
exclude = ["**/__pycache__", "**/.*", "src"]

[tool.isort]
profile = "black"
sort_reexports = true
extend_skip = ["src"]

[tool.black]
extend-exclude = "src"
